--- a/Módulo 2/ex023/fundo006.html
+++ b/Módulo 2/ex023/fundo006.html
@@ -1,39 +1,83 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>fundo fixo de tela</title>
     <style>
-        body
-        {
+        body {
             height: 100vh;
             background-color: black;
-          background-image: url(Imagens/wallpaper002.jpg);
-          background-repeat: repeat-y;
-          background-position: center center;
-          background-size: cover;
+            background-image: url(Imagens/wallpaper002.jpg);
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-size: cover;
+            background-attachment: fixed;
+            /* Shorthand - background
+          color> image>position>repeat [size] >attachment obs: o size náo esta funcionando tem como fazer: color> image>position>repeat>attachment;
+          background-size:cover; */
+          
         }
 
-        main
-        {
+        main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
-            border:  2px solid darkblue;
+            border: 2px solid darkblue;
             border-radius: 15px;
         }
     </style>
 </head>
+
 <body>
     <main>
         <h1>Teste imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod nemo distinctio odio pariatur sed assumenda autem magni, hic consequuntur, libero aliquid placeat beatae laudantium consequatur ab cum fugit, earum neque.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat magni aliquam excepturi distinctio dolor voluptatibus quisquam nemo, voluptates debitis nisi, iste, iusto consequatur doloribus perferendis? Molestias repellat delectus ea aliquam.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis culpa! Illo cupiditate nam aliquam autem veritatis quidem iusto soluta exercitationem odit, esse omnis expedita, eligendi rerum ad officiis culpa!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod nemo distinctio odio pariatur sed assumenda
+            autem magni, hic consequuntur, libero aliquid placeat beatae laudantium consequatur ab cum fugit, earum
+            neque.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat magni aliquam excepturi distinctio dolor
+            voluptatibus quisquam nemo, voluptates debitis nisi, iste, iusto consequatur doloribus perferendis?
+            Molestias repellat delectus ea aliquam.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, facilis culpa! Illo cupiditate nam
+            aliquam autem veritatis quidem iusto soluta exercitationem odit, esse omnis expedita, eligendi rerum ad
+            officiis culpa!</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi ipsum suscipit sapiente reiciendis
+            architecto! Animi eligendi nisi nulla repellat, dolorum totam tenetur assumenda voluptatibus beatae, fugiat
+            repellendus, voluptatem itaque est. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint delectus
+            distinctio quam officiis in, nihil, voluptates nostrum impedit a nisi eveniet ullam praesentium et fugit ab
+            explicabo molestiae maxime similique. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
+            repellendus quo placeat unde laudantium? Debitis delectus, minima aliquam optio excepturi quae voluptate,
+            rerum blanditiis doloribus similique voluptates adipisci ut nobis?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos eligendi quo nulla ullam molestias
+            maxime at totam inventore, commodi eaque sint architecto earum quasi tenetur cum illum amet, sed vitae.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, voluptatibus. Dolorem libero consequatur
+            voluptate necessitatibus sit? Delectus velit rerum perspiciatis expedita ducimus quibusdam sequi ipsum ex,
+            distinctio aliquam officiis consequuntur?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, magnam molestiae architecto incidunt,
+            animi a quasi in error tempore debitis inventore rerum vel nam quod facere magni, maiores quo deleniti?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, accusamus facere tempora officia rerum hic
+            corporis reiciendis, doloribus a dignissimos deleniti distinctio quae doloremque fugiat nemo quibusdam?
+            Quidem, necessitatibus fugiat? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab corporis
+            consequuntur dicta. Aliquam, illo adipisci optio inventore libero nobis ipsam a non nesciunt nisi
+            reprehenderit soluta nulla explicabo doloribus earum? Lorem ipsum dolor sit amet consectetur adipisicing
+            elit. Obcaecati nesciunt aut delectus pariatur illo. Facere explicabo corrupti veniam enim aperiam, fugiat
+            ullam nisi praesentium! Obcaecati vitae deserunt laborum quae at!</p>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi voluptatum perspiciatis aut facere itaque
+            esse similique alias odit harum sequi quasi eligendi maxime, exercitationem ipsam asperiores magni ad dicta.
+            Accusamus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum tenetur eaque enim placeat
+            minima ducimus nesciunt voluptates, rerum quibusdam illum dolorum, quidem harum sint, consequatur dolores
+            dolore! Necessitatibus, maxime beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            harum tempore illo id recusandae vero corporis, repellendus exercitationem fuga quis tenetur nisi optio
+            rerum porro et corrupti pariatur ullam veniam. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Alias provident ullam facere quaerat quibusdam hic eaque placeat exercitationem velit? Ratione voluptates id
+            minus. Illum voluptate maiores, voluptatibus numquam laudantium ex.
+        </p>
     </main>
-    
+
 </body>
+
 </html>
