--- a/Módulo 2/desafio12/desafio.html
+++ b/Módulo 2/desafio12/desafio.html
@@ -30,7 +30,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes<br>
             É tudo abreviado<br>
@@ -53,7 +53,7 @@
             Ele vale um alto preço. <br>
         </p>
 
-        <p class="imagem">
+        <p>
             Pra piorar a liguagem <br>
             O emoticom é um risco <br>
             Tem símbolo para tudo <br>
@@ -65,7 +65,7 @@
     </section>
 
    
-        <section class="normal">
+        <section class="imagem" id="img02">
             <p>
                 Tenho saudade das cartas <br>
                 Escritas com a própria mão <br>
@@ -78,7 +78,7 @@
         </section>
     
 
-    <section class="imagem">
+    <section class="normal">
         <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
